--- a/final_assignment/deployment.yaml
+++ b/final_assignment/deployment.yaml
@@ -6,6 +6,35 @@ metadata:
 ---
 
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: postgres-pv
+  namespace: crud-app
+spec:
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: ~/workspace/ROTC-semi-guided-material/final_assignment/persistent
+
+---
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-pvc
+  namespace: crud-app
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+
+---
+
+apiVersion: v1
 kind: Secret
 metadata:
   name: postgres-secret
@@ -46,6 +75,13 @@ spec:
                 secretKeyRef:
                   name: postgres-secret
                   key: db_password
+          volumeMounts:
+            - name: postgres-data
+              mountPath: /var/lib/postgresql/data
+      volumes:
+        - name: postgres-data
+          persistentVolumeClaim:
+            claimName: postgres-pvc
 
 ---
 
@@ -112,6 +148,4 @@ spec:
       targetPort: 8000
   selector:
     app: backend-api
-
----
 
