Shreya, Prem | Created kubernetes objects for backend-api and db in crud-app namesapce

--- a/final_assignment/k8s/backend.yaml
+++ b/final_assignment/k8s/backend.yaml
@@ -1,10 +1,9 @@
-
 apiVersion: apps/v1
-kind: Deployment    
+kind: Deployment
 metadata:
   name: backend-api
   namespace: crud-app
-spec: 
+spec:
   replicas: 1
   selector:
     matchLabels:
@@ -16,13 +15,13 @@ spec:
     spec:
       containers:
         - name: backend-api
-          image: final_assignment-backend
           imagePullPolicy: Never
+          image: final_assignment-backend:latest
           ports:
             - containerPort: 8000
           env:
             - name: db_address
-              value: "postgres-service"
+              value: "db"
             - name: db_username
               value: "postgres"
             - name: db_name
@@ -30,21 +29,5 @@ spec:
             - name: db_password
               valueFrom:
                 secretKeyRef:
-                  name: postgres-secret
-                  key: db_password
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: backend-api-service
-  namespace: crud-app
-spec:
-  type: ClusterIP
-  ports:
-    - port: 8000
-      targetPort: 8000
-  selector:
-    app: backend-api
-
+                  name: db-password
+                  key: password
